# Password-Manager-CLI

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: Crypto.hpp  Logger.hpp  PasswordGenerator.hpp  PasswordManager.hpp  Plugin.hpp  Storage.hpp  Sync.hpp  SyncDropbox.hpp  SyncGoogleDrive.hpp  UI.hpp
src/: Crypto.cpp  Logger.cpp  PasswordGenerator.cpp  PasswordManager.cpp  PluginManager.cpp  Storage.cpp  SyncDropbox.cpp  SyncGoogleDrive.cpp  UI.cpp  main.cpp
tests/: CMakeLists.txt  test_logger.cpp
