cmake_minimum_required(VERSION 3.14)
project(PasswordManagerCPP VERSION 1.0.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()
find_package(OpenSSL REQUIRED)
find_package(nlohmann_json 3.2.0 REQUIRED)
find_package(spdlog REQUIRED)
include_directories(include)
add_library(crypto src/Crypto.cpp)
target_link_libraries(crypto PUBLIC OpenSSL::Crypto)
add_library(storage src/Storage.cpp)
target_link_libraries(storage PUBLIC crypto nlohmann_json::nlohmann_json)
add_library(pwdmgr_lib src/PasswordManager.cpp)
target_link_libraries(pwdmgr_lib PUBLIC storage)
add_library(logger src/Logger.cpp)
target_link_libraries(logger PUBLIC spdlog::spdlog)
add_library(plugin src/PluginManager.cpp)
target_link_libraries(plugin PUBLIC pwdmgr_lib)
add_library(pgen src/PasswordGenerator.cpp)
target_link_libraries(pgen PUBLIC pwdmgr_lib)
add_library(ui src/UI.cpp)
target_link_libraries(ui PUBLIC pwdmgr_lib)
add_library(sync src/SyncDropbox.cpp src/SyncGoogleDrive.cpp)
target_link_libraries(sync PUBLIC OpenSSL::Crypto nlohmann_json::nlohmann_json pwdmgr_lib)
add_executable(pwdmgr src/main.cpp)
target_link_libraries(pwdmgr PRIVATE pwdmgr_lib)
enable_testing()
add_subdirectory(tests) 